--- a/layouts/partials/blocks/newsblock.html
+++ b/layouts/partials/blocks/newsblock.html
@@ -4,7 +4,7 @@
 
     <!-- Apple Emoji Section -->
     <div class="funny-icon">
-        <span class="funny-emoji">🍎</span>
+        <span class="funny-emoji">🧙🏻</span>
         <span class="funny-text">Don't click me</span>
     </div>
     <!-- End of Apple Emoji Section -->
@@ -188,7 +188,7 @@
             const funnyIcon = document.querySelector('.funny-icon');
             funnyIcon.addEventListener('click', function() {
                 // Display a funny message
-                alert("🍎 Oops! I told you not to click me! Now you're craving apples, aren't you?");
+                alert("Aha! I knew you couldn’t resist! 🎩✨");
             });
         });
     </script>
