--- a/assets/media/css/custom.css
+++ b/assets/media/css/custom.css
@@ -4,7 +4,7 @@
 }
 
 .profile-photo {
-    width: 150px; /* Adjust the size as needed */
+    width: 150px; /* Adjust size as needed */
     border-radius: 50%;
 }
 
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 3em; /* Adjust the size as needed */
+    font-size: 3em; /* Adjust size as needed */
     opacity: 0;
     transition: opacity 0.3s;
     pointer-events: none;
